// LLM Tinder — Prisma schema (SQLite locally → Supabase Postgres later).
// Notes for the future migration:
//  - SQLite has no native enums, so `Swipe.direction` is a String ("LEFT"|"RIGHT").
//    On Postgres this can become a real `enum SwipeDirection`.
//  - Prices use Float here; on Postgres you may prefer Decimal.

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider  = "postgresql"
  url       = env("DATABASE_URL")
  directUrl = env("DIRECT_URL")
}

enum SwipeDirection {
  LEFT
  RIGHT
}

// ── Users & Auth (Auth.js / NextAuth + @auth/prisma-adapter) ──

model User {
  id            String    @id @default(cuid())
  email         String    @unique
  name          String?
  image         String?
  emailVerified DateTime? // required by the Auth.js adapter for OAuth sign-ups
  passwordHash  String?
  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt

  accounts      Account[]
  sessions      Session[]
  swipes        Swipe[]
  preferences   UserPreference[]
}

model Account {
  id                String  @id @default(cuid())
  userId            String
  type              String
  provider          String
  providerAccountId String
  refresh_token     String?
  access_token      String?
  expires_at        Int?
  token_type        String?
  scope             String?
  id_token          String?
  session_state     String?

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
}

model Session {
  id           String   @id @default(cuid())
  sessionToken String   @unique
  userId       String
  expires      DateTime

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model VerificationToken {
  identifier String
  token      String   @unique
  expires    DateTime

  @@unique([identifier, token])
}

// ── AI models: the "profiles" being swiped on ──

model AiModel {
  id                 String   @id @default(cuid())
  name               String
  provider           String
  tagline            String?
  description        String?
  imageUrl           String?
  contextWindow      Int?
  releaseDate        DateTime?
  inputPricePerMTok  Float?
  outputPricePerMTok Float?
  isActive           Boolean  @default(true)
  createdAt          DateTime @default(now())
  updatedAt          DateTime @updatedAt

  swipes   Swipe[]
  features AiModelFeature[]
}

// ── Swipes: canonical record. A match = a RIGHT swipe ──

model Swipe {
  id        String   @id @default(cuid())
  userId    String
  aiModelId String
  direction SwipeDirection
  createdAt DateTime @default(now())

  user    User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  aiModel AiModel @relation(fields: [aiModelId], references: [id], onDelete: Cascade)

  @@unique([userId, aiModelId])
  @@index([userId, direction])
}

// ── Feature set + preferences ──

model Feature {
  id       String  @id @default(cuid())
  name     String  @unique
  category String?

  models      AiModelFeature[]
  preferences UserPreference[]
}

model AiModelFeature {
  id        String  @id @default(cuid())
  aiModelId String
  featureId String
  value     String?
  note      String?

  aiModel AiModel @relation(fields: [aiModelId], references: [id], onDelete: Cascade)
  feature Feature @relation(fields: [featureId], references: [id], onDelete: Cascade)

  @@unique([aiModelId, featureId])
}

model UserPreference {
  id        String   @id @default(cuid())
  userId    String
  featureId String
  weight    Int      @default(3)
  createdAt DateTime @default(now())

  user    User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  feature Feature @relation(fields: [featureId], references: [id], onDelete: Cascade)

  @@unique([userId, featureId])
}
